# cmake-unity-tutorial-1

./: .gitignore  CMakeLists.txt
test/suite_1/: suite_1.c
